enable writing datasets larger than mmap and heap limits